# G7Static

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
lambda/: function.py
src/: app.py  config.py  log.py  schemas.py
src/db/: database.py  repositories.py
src/models/: models.py
src/routes/: auth.py  files.py  upload.py
src/utils/: aws.py  security.py
